--- a/ProjectUAS_EzBooking_Client/src/Restaurant/FormDashboardRestaurant.form
+++ b/ProjectUAS_EzBooking_Client/src/Restaurant/FormDashboardRestaurant.form
@@ -107,6 +107,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="EXIT"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExitActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnMenu">
           <Properties>
